<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.samir.eat.ui.main.MainViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background_gray"
        android:fitsSystemWindows="true">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/filter_item_height"
            android:background="@color/green"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin_small_12"
                android:src="@drawable/ic_dehaze_24"
                tools:ignore="ContentDescription" />

            <EditText
                android:paddingStart="@dimen/margin_small_12"
                android:drawablePadding="@dimen/margin_small_8"
                android:id="@+id/edit_search"
                android:layout_width="match_parent"
                android:layout_height="@dimen/search_bar_height"
                android:layout_marginEnd="@dimen/margin_normal_16"
                android:background="@drawable/drawable_button_rounded"
                android:drawableStart="@drawable/ic_baseline_search_24"
                android:hint="@string/search_restaurants_hint"
                android:inputType="text"
                android:textSize="@dimen/text_size_14"
                tools:ignore="Autofill" />
        </androidx.appcompat.widget.Toolbar>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_restaurants"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintTop_toBottomOf="@id/toolbar" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_no_restaurants"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@color/background_gray"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no_restaurants_label"
                android:textColor="@color/dark_gray"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.button.MaterialButton
            android:backgroundTint="@color/background_gray"
            app:cornerRadius="20dp"
            android:insetBottom="0dp"
            android:insetTop="0dp"
            android:id="@+id/button_filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_normal_16"
            android:gravity="center"
            android:text="@string/filter_label"
            android:textColor="@color/dark_gray"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>